# GenAI

./: .gitignore  SRS.md  pyproject.toml  requirements.txt
ChatModels/: app.py  chatbotV2.py  chatbotV5.py  localmodel.py
ChatModels/Basic/: chat.py  huggingface.py
ChatModels/EmbeddingsModel/: HUggingface_embedding.py
ChatModels/Memory/: chatbotV1.py  chatbotV3.py  chatbotV4.py
ChatModels/PromptTemplete/: ChatMessagePrompt.py  ChatPrompt.py  PromptTemplete.py
ChatModels/StructureOutput/: Pydentic.py
EmbeddingsModel/: embedding.py
HybridSearch/: readme.md
Olama/: 1.Chatbot.py
Olama/RAG/: chat.py  db.py
RAG/Data/: me.txt
RAG/DocumentLoader/: PdfLoader.py  TxtLoader.py  Unstructure.py  web.py
RAG/Embeding/: Embeding.py
RAG/Retriver/: DirectRetriver.py  multiquery.py
RAG/SemanticSearch/: SemanticSearch.py
RAG/Spliter/: CharecterText.py  RecursiveText.py  Token.py
RAG/VectorDB/: vectordb.py
Runnables/: LambdaRunnables.py  ParallelRunnables.py  PassthroughRunnables.py  SequenceRunnables.py
Small-Concepts/: batch.py  streaming.py
Tools/Build_in/: news_resercher.py
Tools/Custom/: tools.py  tools_final.py
UpdateLangChainV1/: 1-Agent.py
